--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/PENA98/GestorPresupuestos#readme",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "concurrently": "^4.1.2",
     "connect-flash": "^0.1.1",
@@ -32,7 +33,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "shortid": "^2.2.15",
-    "slug": "^1.1.0"
+    "slug": "^1.1.0",
+    "sweetalert2": "^8.18.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
