Implementar Toastr JS

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/PENA98/GestorPresupuestos#readme",
   "dependencies": {
-    "bcrypt": "^3.0.6",
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
     "chart.js": "^2.8.0",
     "concurrently": "^4.1.2",
     "connect-flash": "^0.1.1",
@@ -29,12 +29,13 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
-    "mongoose": "^5.7.1",
+    "mongoose": "^5.7.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "shortid": "^2.2.15",
     "slug": "^1.1.0",
-    "sweetalert2": "^8.18.4"
+    "sweetalert2": "^8.18.4",
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
