--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
+    "http-errors": "^1.7.3",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.3.1",
+    "nodemailer-express-handlebars": "^3.1.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
